<resources>
    <string name="facebook_app_id">262163201052137</string>
    <string name="app_name">EatMore</string>
    <string name="cancel">cancel</string>
    <string name="delicious_food_for_every_mood">DELICIOUS FOOD FOR EVERY MOOD</string>
    <string name="order_from_food_over_200_restaurants">Order from food over 200 restaurants</string>
    <string name="order_your_take_away_food_online">Order your take away food online</string>
    <string name="email">E-mail adresse</string>
    <string name="password">Password</string>
    <string name="login">Log ind</string>
    <string name="forgot_password">Glemt adgangskode</string>
    <string name="new_to_eatmore_sign_up">Opret konto</string>
    <string name="reorder">Reorder</string>
    <string name="details">Details</string>
    <string name="order_now">Order now</string>
    <string name="orders">Orders</string>
    <string name="your_orders">Ordre</string>
    <string name="my_profile">Indstillinger</string>
    <string name="menu">Menukort</string>
    <string name="rating">Bedømmelser</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="large_text">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
    </string>
    <string name="transition_string">card_transition</string>
    <string name="continue_">Bekræft</string>
    <string name="search_the_menu">Søg i menukortet</string>
    <string name="add">Tilføj</string>
    <string name="go_on_playstore">Go on PlayStore</string>
    <string name="new_update">New update</string>
    <string name="dismiss">Dismiss</string>
    <string name="login_val_email">Brugernavn / adgangskode kan ikke være tomt</string>
    <string name="invalid_email">Invalid email Address</string>
    <string name="login_val_pass">Username/Password cannot be blank</string>
    <string name="internet_not_available">Please check internet connection</string>
    <string name="error_404">Server not found&#8230; Try after sometime</string>
    <string name="error_407">Server not responding\nPlease chenck the network connection.</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="enter_valid_email_address">Indtast venligst en gyldig e-mail</string>
    <string name="password_must_consist">Adgangskode kan ikke være mindre end 6 tegn</string>
    <string name="enter_your_unique_password">Indtast venligst din adgangskode</string>
    <string name="enter_your_new_password">Indtast venligst din nye adgangskode</string>
    <string name="enter_your_old_password">Forrige adgangskode kan ikke være tomt!</string>
    <string name="enter_your_confirm_password">Bekræft venligst din adgangskode</string>
    <string name="signup">Signup</string>
    <string name="add_to_cart">ADD TO CART %1$s</string>
    <string name="minues">- %1$s</string>
    <string name="total_goods">I alt (%1$s produkt(er))</string>
    <string name="plus">+ %1$s</string>
    <string name="restaurant_rating">(%1$s bedømmelser)</string>
    <string name="add_new_address">Add new address</string>
    <string name="verify">Verify</string>
    <string name="address">Adresse</string>
    <string name="ok">ok</string>
    <string name="go_to_payment">Go to payment</string>
    <string name="select_delivery_time">Select delivery time:</string>
    <string name="if_you_have_any_questions">If you have any questions or enquiries please call us on:</string>
    <string name="permission_denied">Permission denied</string>
    <string name="first_name">First name</string>
    <string name="subscribe">Modtag nyhedsbrev fra EatMore. Bare rolig vi spammer dig selvfølgelig ikke. Du accepterer at vi må kontakte dig via e-mail, telefon, push notifikationer eller sms med gode tilbud og informationer omkring konkurrencer, produkter og tjenester. Du kan til enhver tid afmelde dig.</string>
    <string name="open_now">%1$s restauranter er åbne nu, sorteret efter bedste match</string>
    <string name="pre_order">%1$s restauranter åbner senere</string>
    <string name="closed">%1$s restauranter er ikke tilgængelig</string>
    <string name="lukket">lukket</string>
    <string name="ordernow">Bestil nu</string>
    <string name="preorder">Forudbestil nu</string>
    <string name="notavailable">Not available</string>
    <string name="user_have_reviewed">%1$s bedømmelser</string>
    <string name="samlet">Samlet</string>
    <string name="we_are_sorry">We are Sorry.\nThis restaurant is closed.\nPlease check opening hours.</string>
    <string name="kvalitet">Kvalitet</string>
    <string name="kundeservice">Kundeservice</string>
    <string name="leveringstid">Leveringstid</string>
    <string name="openandclose">%1$s - %2$s</string>
    <string name="percent">%1$s%%</string>
    <string name="food_administration">Fødevarestyrelsen Kontrolrapport</string>
    <string name="deliveryinformation">Leveringsinformation</string>
    <string name="no_data_found">No data found !</string>
    <string name="please_search_the_item">Please search the item</string>
    <string name="unfortunately_error">Unfortunately, we did not find any restaurant \n  in your area.</string>
    <string name="didnot_match_restaurant_error">Sorry, we did not match any restaurant.</string>
    <string name="search_again">Search again</string>
    <string name="restaurants">Restauranter</string>
    <string name="loading">Loading&#8230;</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="are_you_sure_would">Would you like to logout?</string>
    <string name="logout">Logout</string>
    <string name="no">Nej</string>
    <string name="yes">Ja</string>
    <string name="are_you_sure_to_delete">Vil du slette?</string>
    <string name="item_has_been">Item has been successfully added !</string>
    <string name="pickup">Hent selv</string>
    <string name="pickup_">pickup</string>
    <string name="delivery">Udbringning</string>
    <string name="delivery_">delivery</string>
    <string name="pickup_caps">Pickup</string>
    <string name="delivery_caps">Delivery</string>
    <string name="you_are_ordering_pickup">You are about to order your food for pickup</string>
    <string name="enter_your_valid_name">Indtast venligst dit navn</string>
    <string name="enter_your_postal_number">Indtast venligst dit postnummer</string>
    <string name="enter_the_valid_number">Forkert telefon nummer</string>
    <string name="enter_your_street_number">Indtast venligst dit gadenavn</string>
    <string name="enter_your_house_number">Indtast venligst dit husnummer</string>
    <string name="enter_your_floor_number">Enter your floor number</string>
    <string name="postal_number_is_not_valid">Forkert postnummer</string>
    <string name="request_successful">Request %1$s</string>
    <string name="successful">successful</string>
    <string name="failed">failed</string>
    <string name="thank_you_for_your_order_n_your_order_will_be_processed_as_soon_as_possilbe">Thank you for your order.\n  Your order will be processed as soon as possilbe.</string>
    <string name="sorry_for_your_order_n_your_order_will_not_be_processed">Sorry for your order.\n  Your order could not be processed.</string>
    <string name="requeted_from">Requeted from</string>
    <string name="order_number">Order number: 8548459562</string>
    <string name="order_date">3:30PM 11NOV2018</string>
    <string name="if_you_have_any_questions_or_enquiries_please_call_us_on">If you have any questions or enquiries please call us on: 88826543</string>
    <string name="continue_order">Continue Order</string>
    <string name="total_amount">%1$s</string>
    <string name="na">N/A</string>
    <string name="fulladdress">%1$s %2$s %3$s %4$s %5$s</string>
    <string name="apply_coupon">Har du en rabatkode?</string>
    <string name="online_payment">Online betaling</string>
    <string name="cash_payment">Kontant betaling</string>
    <string name="how_do_you_want_to_pay">How do you want to pay?</string>
    <string name="apply">Apply</string>
    <string name="discount">- %1$s</string>
    <string name="count_ammount">%1$s | %2$s</string>
    <string name="fra">fra\n%1$s</string>
    <string name="transaction_has_been_declined">Transaction has been declined</string>
    <string name="confirm">Bekræfte</string>
    <string name="pay">Gå til betaling</string>
    <string name="basket">Indkøbskurv</string>
    <string name="info">Information</string>
    <string name="payment">Hvordan vil du betale?</string>
    <string name="confirm_delivery_time">Bekræft din leveringstid</string>
    <string name="giftcard">Gavekort</string>
    <string name="payment_methods">Betalingsmetoder</string>
    <string name="addresses">Addresses</string>
    <string name="customer_service">Customer service</string>
    <string name="rate_the_app">Rate the App!</string>
    <string name="streethousefloor">%1$s %2$s %3$s,</string>
    <string name="postalcity">%1$s %2$s</string>
    <string name="title">Title</string>
    <string name="save">Gem</string>
    <string name="help">Help</string>
    <string name="health_report">Health Report</string>
    <string name="profile_info">User Profile</string>
    <string name="terms_of_services">Handelsbetingelser</string>
    <string name="edit_address">Edit Address</string>
    <string name="telephone_number">Telephone number</string>
    <string name="please_login_to_see">Log ind for at se dine ordre.</string>
    <string name="no_order">No order(s) to display.</string>
    <string name="try_again">Try again</string>
    <string name="delivered_at">Delivered at:</string>
    <string name="picked_up_from">Picked up from:</string>
    <string name="order_overview">Order overview:</string>
    <string name="order_no">Order no.: %1$s</string>
    <string name="rate">Rate</string>
    <string name="rate_order">Rate Order</string>
    <string name="enter_your_valid_information">Enter your valid information</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="your_password_and_confirm_password_do_not_match">Adgangskode og bekræftelse stemmer ikke</string>
    <string name="rate_it_exclaim">Rate it!</string>
    <string name="ordre_under_behandling">Ordre under process</string>
    <string name="no_entry_found_for_address">No entry found for address.</string>
    <string name="change">Vælg adresse</string>
    <string name="sorry_restaurant_has_been_closed">Sorry Restaurant has been closed.</string>
    <string name="order_eat_amp_njoy"><![CDATA[Order, Eat & Njoy!]]></string>
    <string name="bestil_din_take_away_mad_online">Bestil din take away mad online</string>
    <string name="cokkie_policy">Cokkie policy</string>
    <string name="kokkentype">Kokkentype</string>
    <string name="tilpas">Tilpas</string>
    <string name="all">All</string>
    <string name="search_the_restaurant">Search the restaurant</string>
    <string name="change_password">Skift adgangskode</string>
    <string name="next">Næste</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="gotit">Got it!</string>
    <string name="restaurant_full_address">%1$s, %2$s</string>
    <string name="haordan_var_din_oplevelxse_med_app_en">Haordan var din oplevelxse med app\'en?</string>
    <string name="navn">Navn</string>
    <string name="telefon_nummer">Telefon nummer</string>
    <string name="postnummer">Postnummer</string>
    <string name="by">By</string>
    <string name="etage_dor_andet_valgfrit">Etage/dor/andet(valgfrit)</string>
    <string name="vej">Vej</string>
    <string name="næste">Næste</string>
    <string name="skriv_din_kommentar_her">Skriv din kommentar her</string>
</resources>