<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
    >

    <data>


        <import type="android.view.View">

        </import>

        <variable
            name="user_Info"
            type="dk.eatmore.foodapp.fragment.Dashboard.Home.Address.User_Info">

        </variable>

        <variable
            name="isPickup"
            type="Boolean">

        </variable>


    </data>


    <LinearLayout
        android:id="@+id/address_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:focusable="true"

        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/toolbar">

            </include>


        </android.support.design.widget.AppBarLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/empty_view"
            >
            <android.support.v4.widget.NestedScrollView
                android:id="@+id/nested_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btn_view"
                android:visibility="@{user_Info ==null ? View.GONE : View.VISIBLE }"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >



                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/name_txt"
                        style="@style/SubtitleMidium_TextViewSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/navn"
                        />


                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/name_edt"
                        style="@style/EditText_Normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/rectangle_edittext"
                        android:nextFocusDown="@id/telephone_number_edt"
                        android:padding="@dimen/_8sdp"
                        android:hint="@string/navn"
                        android:singleLine="true"
                        >

                    </android.support.v7.widget.AppCompatEditText>


                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/telephone_number_txt"
                        style="@style/SubtitleMidium_TextViewSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/telefon_nummer"
                        />


                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/telephone_number_edt"
                        style="@style/SubtitleRegular_TextViewSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/telefon_nummer"
                        android:nextFocusDown="@id/street_edt"
                        android:background="@drawable/rectangle_edittext"
                        android:inputType="number"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="horizontal"
                        >

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/address_txt"
                            style="@style/SubtitleMidium_TextViewSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:text="@string/address"
                            android:visibility="@{isPickup == false ? View.VISIBLE : View.GONE}"
                            />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/change_txt"
                            style="@style/Subtitle_TextViewSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignEnd="@+id/address_txt"
                            android:text="@string/change"
                            android:visibility="@{isPickup == false ? View.VISIBLE : View.GONE}"
                            android:textColor="@color/theme_color"
                            />


                    </RelativeLayout>



                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/street_edt"
                        style="@style/EditText_Normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/vej"
                        android:nextFocusDown="@id/house_edt"
                        android:background="@drawable/rectangle_edittext"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        android:visibility="@{isPickup == false ? View.VISIBLE : View.GONE}"
                        />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/house_edt"
                        android:nextFocusDown="@id/floor_edt"
                        style="@style/EditText_Normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/enter_your_house_number"
                        android:background="@drawable/rectangle_edittext"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        android:visibility="@{isPickup == false ? View.VISIBLE : View.GONE}"
                        />


                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/floor_edt"
                        android:nextFocusDown="@id/postnumber_edt"
                        style="@style/EditText_Normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/etage_dor_andet_valgfrit"
                        android:background="@drawable/rectangle_edittext"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        android:visibility="@{isPickup == false ? View.VISIBLE : View.GONE}"
                        />


                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/postnumber_txt"
                        style="@style/SubtitleMidium_TextViewSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/postnummer"
                        android:visibility="@{isPickup == false ? View.VISIBLE : View.GONE}"
                        />


                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/postnumber_edt"
                        style="@style/EditText_Normal"
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/postnummer"
                        android:background="@drawable/rectangle_edittext"
                        android:inputType="number"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        android:visibility="@{isPickup == false ? View.VISIBLE : View.GONE}"
                        />


                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/city_txt"
                        style="@style/SubtitleMidium_TextViewSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/by"
                        android:visibility="@{isPickup == false ? View.VISIBLE : View.GONE}"
                        />



                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/city_edt"
                        style="@style/EditText_Normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:background="@drawable/rectgreycurve_shape"
                        android:enabled="false"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textColor="@color/black_light"
                        android:visibility="@{isPickup == false ? View.VISIBLE : View.GONE}"

                        />


                </LinearLayout>






            </android.support.v4.widget.NestedScrollView>



            <RelativeLayout
                android:id="@+id/btn_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:visibility="@{user_Info ==null ? View.GONE : View.VISIBLE }"
                >

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.2"
                    android:background="@color/divider_color"
                    android:visibility="visible" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/proceed_view_nxt"
                    style="@style/Button"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/theme_color"
                    android:text="@string/næste"
                    android:textColor="@color/white" tools:targetApi="lollipop"/>

            </RelativeLayout>


            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progress"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true" />



        </RelativeLayout>











    </LinearLayout>


</layout>

